@@ -11,12 +11,18 @@ class TokenAuthenticatableTest < ActiveSupport::TestCase
 
   test 'should reset authentication token' do
     user = new_user
-
-    user.reset_authentication_token!(false)
+    user.reset_authentication_token
     previous_token = user.authentication_token
-
-    user.reset_authentication_token!(false)
+    user.reset_authentication_token
     assert_not_equal previous_token, user.authentication_token
+  end
+
+  test 'should ensure authentication token' do
+    user = new_user
+    user.ensure_authentication_token
+    previous_token = user.authentication_token
+    user.ensure_authentication_token
+    assert_equal previous_token, user.authentication_token
   end
 
   test 'should test for a valid authentication token' do
@@ -29,7 +35,7 @@ class TokenAuthenticatableTest < ActiveSupport::TestCase
   test 'should authenticate a valid user with authentication token and return it' do
     User.expects(:authentication_token).returns(VALID_AUTHENTICATION_TOKEN)
     user = create_user
-    User.any_instance.stubs(:confirmed?).returns(true)
+    user.confirm!
     authenticated_user = User.authenticate_with_token(:auth_token => user.authentication_token)
     assert_equal authenticated_user, user
   end
@@ -37,7 +43,7 @@ class TokenAuthenticatableTest < ActiveSupport::TestCase
   test 'should return nil when authenticating an invalid user by authentication token' do
     User.expects(:authentication_token).returns(VALID_AUTHENTICATION_TOKEN)
     user = create_user
-    User.any_instance.stubs(:confirmed?).returns(true)
+    user.confirm!
     authenticated_user = User.authenticate_with_token(:auth_token => user.authentication_token.reverse)
     assert_nil authenticated_user
   end
